api/api-celery-pod.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: skipper-api-celery
spec:
  selector:
    matchLabels:
      app: skipper-api-celery
  template:
    metadata:
      labels:
        app: skipper-api-celery
    spec:
      containers:
        - image: katanaml/skipper-api:latest
          name: skipper-api-celery
          command: ["celery"]
          args: ["-A", "api.worker", "worker", "--loglevel=INFO"]
          imagePullPolicy: IfNotPresent
