api/api-pod.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: skipper-api
spec:
  selector:
    matchLabels:
      app: skipper-api
  template:
    metadata:
      labels:
        app: skipper-api
    spec:
      containers:
        - image: katanaml/skipper-api:latest
          name: skipper-api
          command: ["uvicorn"]
          args: ["endpoint:app", "--port=8000", "--host", "0.0.0.0"]
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: skipper-api
spec:
  selector:
    app: skipper-api
  ports:
    - port: 8000
      protocol: TCP
      targetPort: http
  type: ClusterIP
