api/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /api/v1/skipper/tasks/
            pathType: Prefix
            backend:
              service:
                name: skipper-api
                port:
                  number: 8000
  ingressClassName: nginx

---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
